--- a/demo.html
+++ b/demo.html
@@ -72,7 +72,7 @@
 			var PCP = PolarClockPortfolio;
 			PCP.config = config;
 			PCP.hw = hw;
-			PCP.fontSource = 'https://fonts.gstatic.com/ea/cwtexkai/v3/cwTeXKai-zhonly.ttf';
+			PCP.fontSource = 'SourceHanSerifSC-Heavy.otf';
 
             PCP.onLoadLoadingPage = function(){
                 console.log('Loading Success');
