--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				nameCircleStroke: 'white',
                 tickTextColor: 'white',	
 				nameTextColor: 'green',
-                nameText: '展示用',
+                nameText: '林寧',
                 nameCircleColor: 'rgba(106,76,156,0.3)',
                 nameTransitionLoop: true,
 				
@@ -95,8 +95,9 @@
                 }
             },
             loading: {
-                githubAccount: 't109598105',
-                githubRepo: 'portfolio-demo'
+                githubAccount: 'phoebbbbe',
+                githubRepo: 'ct2022s',
+                autoLoading: false
             }
         };
 		
@@ -104,7 +105,7 @@
 			var PCP = PolarClockPortfolio;
 			PCP.config = config;
 			PCP.hw = hw;
-			PCP.fontSource = 'https://fonts.gstatic.com/ea/cwtexkai/v3/cwTeXKai-zhonly.ttf';
+			PCP.fontSource = 'SourceHanSerifSC-Heavy.otf';
 
             PCP.onLoadLoadingPage = function(){
                 console.log('Loading Success');
