--- a/hw01/index.html
+++ b/hw01/index.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<title>108AC1026 HW01</title>
-	</head>
+	<head></head>
 	<body> 
 		<h1>HW01</h1>
 			
