--- a/hw01/index.html
+++ b/hw01/index.html
@@ -2,11 +2,14 @@
 	<head></head>
 	<body> 
 		<h1>HW01</h1>
-			
-		<ol>
-		<li><a href="https://drive.google.com/file/d/1La2PC3dbWTUGxuiIyBezGJ8yTixJk-oy/view?usp=sharing">下載 otf 字型檔</a></li>
-		<li><a href="https://colab.research.google.com/drive/1wrni4RN6z64vsg-Z4NSSbY466ew0SfXo?usp=sharing">連到 Colab 程式碼</a></li>
-		<li><a href="https://drive.google.com/file/d/1Njbfx1ObdxYaWwU1HdPgJUyVCNiqEi-D/view?usp=sharing">下載 ttf 字型檔</a></li>
-		</ol>
+		<ul class="links">
+			<ol>
+			<li><a href="https://drive.google.com/file/d/1La2PC3dbWTUGxuiIyBezGJ8yTixJk-oy/view?usp=sharing">下載 otf 字型檔</a></li>
+			<li><a href="https://colab.research.google.com/drive/1wrni4RN6z64vsg-Z4NSSbY466ew0SfXo?usp=sharing">連到 Colab 程式碼</a></li>
+			<li><a href="https://drive.google.com/file/d/1Njbfx1ObdxYaWwU1HdPgJUyVCNiqEi-D/view?usp=sharing">下載 ttf 字型檔</a></li>
+			</ol>
+		</ul>
+
+		
 	</body>
 </html>
