--- a/hw03/index.html
+++ b/hw03/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-	</head>
-	<body> 
-		<h1>HW01</h1>
-		<ul class="links">
-		<ol>
-		<li><a href="https://drive.google.com/file/d/1La2PC3dbWTUGxuiIyBezGJ8yTixJk-oy/view?usp=sharing" target="_blank">下載 otf 字型檔</a></li>
-		<li><a href="https://colab.research.google.com/drive/1wrni4RN6z64vsg-Z4NSSbY466ew0SfXo?usp=sharing" target="_blank">連到 Colab 程式碼</a></li>
-		<li><a href="https://drive.google.com/file/d/1Njbfx1ObdxYaWwU1HdPgJUyVCNiqEi-D/view?usp=sharing" target="_blank">下載 ttf 字型檔</a></li>
-		</ol>
-		</ul>
-	</body>
+
+<head>
+    <meta charset="utf-8">
+</head>
+<body>
+    <h1>HW03</h1>
+    <h3>Code</h3>
+    <a href="https://t109598105.github.io/CT2021s-hw3-example/">GitHub Link</a>
+    <h3>骨架</h3>
+    <img src="./骨架.png" class = "img-fluid" alt = "骨架">
+    <h3>黑體</h3>
+        <div class = "row">
+            <div class="col-4"><img src="./明林.svg" class = "img-fluid" alt = "明林"></img></div>
+            <div class="col-4"><img src="./明寧.svg" class = "img-fluid" alt = "明寧"></img></div>
+        </div>
+        <h3>明體</h3>
+        <div class = "row">
+            <div class="col-4"><img src="./宋林.svg" class = "img-fluid" alt = "宋林"></img></div>
+            <div class="col-4"><img src="./宋寧.svg" class = "img-fluid" alt = "宋寧"></img></div>
+        </div>
+    </div>
+</body>
 </html>
