--- a/hw03/index.html
+++ b/hw03/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
 </head>
@@ -11,15 +10,10 @@
     <h3>骨架</h3>
     <img src="./骨架.png" class = "img-fluid" alt = "骨架">
     <h3>黑體</h3>
-        <div class = "row">
-            <div class="col-4"><img src="./明林.svg" class = "img-fluid" alt = "明林"></img></div>
-            <div class="col-4"><img src="./明寧.svg" class = "img-fluid" alt = "明寧"></img></div>
-        </div>
-        <h3>明體</h3>
-        <div class = "row">
-            <div class="col-4"><img src="./宋林.svg" class = "img-fluid" alt = "宋林"></img></div>
-            <div class="col-4"><img src="./宋寧.svg" class = "img-fluid" alt = "宋寧"></img></div>
-        </div>
-    </div>
+    <img src="./明林.svg" class = "img-fluid" alt = "明林"></img>
+    <img src="./明寧.svg" class = "img-fluid" alt = "明寧"></img>
+    <h3>明體</h3>
+    <img src="./宋林.svg" class = "img-fluid" alt = "宋林"></img>
+    <img src="./宋寧.svg" class = "img-fluid" alt = "宋寧"></img>
 </body>
 </html>
