--- a/hw03/index.html
+++ b/hw03/index.html
@@ -5,10 +5,15 @@
 </head>
 <body>
     <h1>HW03</h1>
+    <div>
     <h3>Code</h3>
     <a href="https://t109598105.github.io/CT2021s-hw3-example/">GitHub Link</a>
+    </div>
     <h3>骨架</h3>
-    <img src="./骨架.png" class = "img-fluid" alt = "骨架">
+    <div id = "skeleton" class = "tab-pane fade" role = "tabpanel" aria-labelledby="nav-linkToCode-tab">
+        <img src="./骨架.png" class = "img-fluid" alt = "骨架">
+    </div>
+    
     <h3>黑體</h3>
     <img src="./明林.svg" class = "img-fluid" alt = "明林"></img>
     <img src="./明寧.svg" class = "img-fluid" alt = "明寧"></img>
