--- a/hw03/index.html
+++ b/hw03/index.html
@@ -10,15 +10,20 @@
     <a href="https://t109598105.github.io/CT2021s-hw3-example/">GitHub Link</a>
     </div>
     <h3>骨架</h3>
-    <div id = "skeleton" class = "tab-pane fade" role = "tabpanel" aria-labelledby="nav-linkToCode-tab">
-        <img src="./骨架.png" class = "img-fluid" alt = "骨架">
+    <div class = "row">
+        <div class="col-4"><img src="./骨架.png" class = "img-fluid" alt = "骨架"></div>
+    </div>
+    <h3>黑體</h3>
+    <div class = "row">
+        <div class = "col-4"><img src="./明林.svg" class = "img-fluid" alt = "明林"></div>
+        <div class = "col-4"><img src="./明寧.svg" class = "img-fluid" alt = "明寧"></div>
     </div>
     
-    <h3>黑體</h3>
-    <img src="./明林.svg" class = "img-fluid" alt = "明林"></img>
-    <img src="./明寧.svg" class = "img-fluid" alt = "明寧"></img>
     <h3>明體</h3>
-    <img src="./宋林.svg" class = "img-fluid" alt = "宋林"></img>
-    <img src="./宋寧.svg" class = "img-fluid" alt = "宋寧"></img>
+    <div class = "row">
+        <div class = "col-4"><img src="./宋林.svg" class = "img-fluid" alt = "宋林"></div>
+        <div class = "col-4"><img src="./宋寧.svg" class = "img-fluid" alt = "宋寧"></div>
+    </div>
+    
 </body>
 </html>
