--- a/hw07/index.html
+++ b/hw07/index.html
@@ -21,11 +21,11 @@
 			src: url(./Medium.ttf); /* Medium Baseline 字型檔 */
 		}
 		.poems {
-			font-family: 'Strong'; /* Strong Baseline 字型檔 */
+			font-family: 'Medium'; /* Strong Baseline 字型檔 */
 		}
 		@font-face {
-			font-family: Strong;
-			src: url(https://github.com/su8691/ct2022s/hw07/Strong.ttf); /* Strong Baseline 字型檔 */
+			font-family: Medium;
+			src: url(./Medium.ttf); /*src: url(https://github.com/su8691/ct2022s/hw07/Strong.ttf);  Strong Baseline 字型檔 */
 		}
 		a:visited { color: #0000EE; }
 		a:hover { color: #FF5151; }
